<resources>
    <string name="key" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAxj8S982BHFvbnC7j2E/z5/2pLAeMigFQVefjFa0B+auVXtvEtJlL2ck/qgjmFQD4NdbQzN1AJUIueBvlk/s02L0T7hkRnVXPEar3+MFb8EKAWNMBm7IhVFwzCbhEwD3KuOtmOoDK9ZgWajkP1/M1NUP5s7SiuCNJgDsQs3WU94CZI+zvVcHamF7R7TKNWQDTw39re2Vje+KwTBiX0oaA6LAhaXuvnysHB8I5FH8WR3hlzJWpc1lu7bK/rlTsBytETT94QWncUZ+Qn1PxFJNGulS1AzeUd6/xzSD1WjxL0qa4uMJnTAEf+JaKvPhTGXkUkvvGaoPZAc4VKnywaeXo+wIDAQAB</string>
    <string name="facebook_app_id" translatable="false">516200906132106</string>
    <string name="test_ads_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="camera_type_title">Камера</string>
    <string name="realtime_type_title">В реальном времени</string>
    <string name="gallery_type_title">Из галереи</string>
    <string name="empty_day_title">Этот день был пропущен!</string>
    <string name="empty_day_analytics_title">За этот период не велось аналитики!</string>
    <string name="your_average_mood_title">Ваше среднее настроение: %s</string>
    <string name="remove_add_description">Всего за 100 рублей в месяц вы будете пользоваться этим приложением беспрепятственно, включая отсутсвтвие надоедливой рекламы :)</string>
    <string name="sub_pro_description">Всего за 300 рублей в месяц вы получите доступ к функциям: анализ настроения по голосу, полное отключение рекламы, а также статистика</string>
    <string name="manually_description">Добавьте свою собственную заметку и фотографию. Подходит, когда всё хочется сделать самому и максимально настроить.</string>
    <string name="voice_description">Добавьте эмоцию через ответы на заданные вопросы голосом и последующим автоматическим распознаванием. Работает не идеально, но порой это легче и быстрее.</string>
    <string name="survey_description">Пройдите несложный опросник, и мы определим ваше настроение. Если сомневаетесь в нём - это лучший способ</string>
    <string name="photo_description">Предоставьте своё (или чужое) фото, и мы проанализируем, какое настроение у этого человека.</string>
    <string name="camera_type_description">Сфотографируйте себя или своего друга на камеру, и проанализируйте настроение</string>
    <string name="realtime_type_description">Анализируйте эмоции свои или друга в режиме реального времени. Больше подходит для того, чтобы подстроиться под своё настроение</string>
    <string name="gallery_type_description">Анализируйте свои или чужие эмоции с помощью фото из вашей галереи.</string>
    <string name="analytics_option">Аналитика</string>
    <string name="diary_option">Дневник</string>
    <string name="advices_menu_option">Советы</string>
    <string name="progress_menu_option">Статистика</string>
    <string name="settings_menu_option">Настройки</string>
    <string name="pro_menu_option">Про - версия</string>
    <string name="conversation_option">Беседа</string>
    <string name="manually_option">Вручную</string>
    <string name="voice_option">Голосом</string>
    <string name="photo_option">По фото</string>
    <string name="survey_option">Пройдя опрос</string>
    <string name="last_ten_days_option">Последние 10 дней</string>
    <string name="last_month_option">Последний месяц</string>
    <string name="half_year_option">Последние полгода</string>
    <string name="year_option">Последний год</string>
    <string name="select_own_period_option">Указать свой период</string>
    <string name="enter_tag_name_hint">Введите наименование занятия</string>
    <string name="name_hint">Введите своё имя…</string>
    <string name="e_mail_hint">Введите ваш e-mail</string>
    <string name="password_hint">Придумайте пароль…</string>
    <string name="enter_phone_hint">Введите ваш телефон…</string>
    <string name="enter_password_hint">Введите свой пароль…</string>
    <string name="type_note_here_hint">Если хотите, напишите здесь заметку</string>
    <string name="hint_photo">Вы можете определить своё настроение (или другого человека) и сохранить его</string>
    <string name="empty_day_hint">Когда вы пропускаете день, вы не ведёте никаких записей! Старайтесь возвращаться сюда каждый день :)</string>
    <string name="search_emotion_hint">Поиск эмоции по заметке / дате…</string>
    <string name="empty_day_analytics_hint">Старайтесь вести ваш дневник настроения постоянно :)</string>
    <string name="save_analytics_label">Сохранить аналитику</string>
    <string name="voice_question_1_label">Вопрос 1:</string>
    <string name="voice_question_2_label">Вопрос 2:</string>
    <string name="voice_question_3_label">Вопрос 3:</string>
    <string name="mood_analytics_label">Аналитика настроения</string>
    <string name="cancel_label">Отменить</string>
    <string name="add_emotion_label">Добавить эмоцию</string>
    <string name="add_note_label">Добавить заметку</string>
    <string name="or_use_this_label">Или воспользуйтесь этим</string>
    <string name="select_emotion_label">Выберите эмоцию</string>
    <string name="select_date_label">Выберите дату</string>
    <string name="today_label">Сегодня</string>
    <string name="you_may_add_photos_label">Можете добавить фотографию</string>
    <string name="emotion_label">Ваша эмоция</string>
    <string name="create_my_tag_label">Создать свой тэг</string>
    <string name="happy_feel_label">счастливо</string>
    <string name="good_feel_label">хорошо</string>
    <string name="neutral_feel_label">нейтрально</string>
    <string name="sad_feel_label">грустно</string>
    <string name="angry_feel_label">злым</string>
    <string name="select_tag_category_label">Выберите категорию тэга</string>
    <string name="create_emotion_label">Создание настроения</string>
    <string name="pro_sub_label">Pro-подписка</string>
    <string name="settings_label">Настройки</string>
    <string name="add_tags_label">Добавление тэгов</string>
    <string name="detail_emotion_label">Просмотр эмоции</string>
    <string name="statistics_option">Статистика</string>
    <string name="advices_label">Советы</string>
    <string name="select_icon_label">Выбрать иконку</string>
    <string name="select_month_label">Выберите месяц</string>
    <string name="full_analysis_label">Полный отчёт</string>
    <string name="already_have_an_account_label">Уже есть аккаунт?</string>
    <string name="enter_login_label">Войти</string>
    <string name="reg_label">Регистрация</string>
    <string name="authorization_label">Авторизация</string>
    <string name="create_account_label">Создать аккаунт</string>
    <string name="loading_label">Загрузка …</string>
    <string name="tap_to_record_label">Нажмите для записи</string>
    <string name="statistic_label">Статистика</string>
    <string name="sort_type_label">Выберите тип эмоции…</string>
    <string name="registration_label">Регистрация</string>
    <string name="email_auth_label">Вход по e-mail</string>
    <string name="email_reg_label">Регистрация по e-mail</string>
    <string name="welcome_pro_label">Здесь вы можете ознакомиться   со всеми подписками, и при   желании оформить их.</string>
    <string name="remove_ad_label">Убрать рекламу в этом приложении (подписка)</string>
    <string name="subscribe_label">Оформить</string>
    <string name="survey_label">Опрос</string>
    <string name="close_label">Закрыть</string>
    <string name="voice_label">Постарайся ответить несколькими словами, чтобы мне легче было определить твоё настроение</string>
    <string name="hint_photo_recognition_label">Чтобы распознавание получилось чётче, рекомендуем добавлять фото с одним человеком, где хорошо видно его лицо.</string>
    <string name="your_face_not_visible_label">Вашего лица не видно!</string>
    <string name="save_result_label">Сохранить результат</string>
    <string name="retake_photo_label">Переснять фото</string>
    <string name="next_question_label">Следующий вопрос</string>
    <string name="result_survey_label">Результат вашего теста</string>
    <string name="save_mood_label">Сохранить настроение</string>
    <string name="repeat_survey_label">Повторить тест</string>
    <string name="mood_detection_label">Определение настроения</string>
    <string name="interrupt_survey_label">Прервать опрос</string>
    <string name="previous_question_label">Предыдущий вопрос</string>
    <string name="get_analytics_for_label">Получить аналитику за:</string>
    <string name="detailed_information_label">Подробная информация</string>
    <string name="ten_days_label">10 дней</string>
    <string name="last_month_label">Последний месяц</string>
    <string name="last_six_months_label">последние 6 месяцев</string>
    <string name="year_label">последний год</string>
    <string name="your_period_label">ваш указанный период</string>
    <string name="depression_label">депрессии</string>
    <string name="neurosis_label">невроза</string>
    <string name="social_phobia_label">социофобии</string>
    <string name="asthenia_label">астении</string>
    <string name="insomnia_label">бессонницы</string>
    <string name="icon_play_cd">Иконка воспроизведения</string>
    <string name="open_drawer_cd">Открыть меню</string>
    <string name="close_drawer_cd">Закрыть меню</string>
    <string name="drawer_logo_cd">Логотип бокового меню</string>
    <string name="icon_back_cd">Иконка кнопки назад</string>
    <string name="icon_menu_cd">Иконка меню</string>
    <string name="icon_text_cd">Иконка далее</string>
    <string name="emotion_icon_cd">Иконка эмоции</string>
    <string name="icon_voice_cd">Иконка записи</string>
    <string name="image_question_cd">Картинка вопроса</string>
    <string name="make_photo_cd">Сделать фото</string>
    <string name="switch_camera_cd">Сменить камеру</string>
    <string name="flash_toggle_cd">Вкл / выкл вспышку</string>
    <string name="result_photo_cd">Результат снимка</string>
    <string name="mood_icon_cd">Иконка настроения</string>
    <string name="add_photo_icon_cd">Иконка добавления фото</string>
    <string name="save_emotion_icon_cd">Иконка сохранения настроения</string>
    <string name="add_emotion_icon_cd">Иконка добавления настроения</string>
    <string name="icon_registration_cd">Иконка регистрации</string>
    <string name="error_fb_reg_try_later_toast">Произошла ошибка, попробуйте позже :(</string>
    <string name="record_added_toast">Запись добавлена!</string>
    <string name="emotion_deleted_toast">Эмоция удалена!</string>
    <string name="too_quiet_toast">Пожалуйста, скажите четчё и внятнее :)</string>
    <string name="app_name" translatable="false">DailyMood</string>
    <string name="create_emotion">Создать эмоцию</string>
    <string name="you_may_add_tags">"Здесь вы можете выбрать чем вы \\n занимались из предложенных \\n вариантов, или же добавить \\n свой вариант, или же \\n вовсе пропустить это. "</string>
    <string name="create_tag">Создание тэга</string>
    <string name="sport_category">Спорт</string>
    <string name="art_category">Искусство</string>
    <string name="relax_category">Релакс</string>
    <string name="learning_category">Учёба</string>
    <string name="reg_through_email">Регистрация через E-mail</string>
    <string name="reg_through_fb">Регистрация через Facebook</string>
    <string name="already_not_have_account">Ещё нет аккаунта?</string>
    <string name="invalid_email_error">Ввёденная почта должна быть валидной!</string>
    <string name="password_empty_error">Придумайте пароль!</string>
    <string name="password_not_enough_large_error">Пароль должен быть больше 7 символов</string>
    <string name="passwords_must_be_equals_error">Пароли должны совпадать!</string>
    <string name="and_submit_password_error">И подвердите его!</string>
    <string name="make_pro_sub">Оформить про подписку в приложении</string>
    <string name="def_sub_status">Текущий статус подписки: Оформлена.</string>
    <string name="sub_not_found">Подписка не найдена!(</string>
    <string name="developer_nickname" translatable="false">SpiralBitDev</string>
</resources>