<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DailyMoodDefaultBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feature.registration.registrationTypes.view.RegistrationTypeFragment">

    <include
        android:id="@+id/registrationTypesToolbar"
        layout="@layout/view_simple_toolbar" />

    <ImageView
        android:id="@+id/pictureRegistrationImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_registration_cd"
        android:src="@drawable/reg_label_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/registrationTypesToolbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/emailRegistrationButton"
        style="@style/DailyMoodEmailRegistrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bigMargin"
        android:layout_marginBottom="@dimen/bigMargin"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:text="@string/reg_through_email"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pictureRegistrationImageView" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_rounded_16"
        app:layout_constraintEnd_toEndOf="@id/emailRegistrationButton"
        app:layout_constraintStart_toStartOf="@id/emailRegistrationButton"
        app:layout_constraintTop_toBottomOf="@id/emailRegistrationButton" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookRegistrationButton"
        style="@style/DailyMoodLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorAccent"
        android:paddingVertical="15dp"
        android:layout_marginTop="16dp"
        android:paddingStart="11dp"
        android:text="@string/reg_through_fb"
        app:layout_constraintEnd_toEndOf="@id/googleSignInButton"
        app:layout_constraintStart_toStartOf="@id/googleSignInButton"
        app:layout_constraintTop_toBottomOf="@id/googleSignInButton"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/alreadyHasAccountTextView"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="@dimen/mediumMargin"
        android:text="@string/already_have_an_account_label"
        app:layout_constraintBottom_toTopOf="@id/toggleLoginTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/toggleLoginTextView"
        style="@style/DailyMoodPurpleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bigMargin"
        android:text="@string/enter_login_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>