<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DailyMoodDefaultBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feature.registration.emailRegistration.view.EmailRegFragment">

    <include layout="@layout/view_main_toolbar" android:id="@+id/emailRegistrationToolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registrationInputNameLayout"
        style="@style/DailyMoodRegistrationSimpleInputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailRegistrationToolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_input_edit_text"
            style="@style/DailyMoodRegistrationInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingBottom="20dp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registrationInputEmailLayout"
        style="@style/DailyMoodRegistrationSimpleInputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationInputNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_edit_text"
            style="@style/DailyMoodRegistrationInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingBottom="20dp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registrationInputPasswordLayout"
        style="@style/DailyMoodRegistrationPasswordInputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationInputEmailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_edit_text"
            style="@style/DailyMoodRegistrationInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingBottom="20dp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registrationPhoneTextInputLayout"
        style="@style/DailyMoodRegistrationSimpleInputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationInputPasswordLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneInputEditText"
            style="@style/DailyMoodRegistrationInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_hint"
            android:inputType="phone"
            android:paddingStart="20dp"
            android:paddingBottom="20dp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:cornerRadius="16dp"
        android:fontFamily="@font/ubuntu_bold"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/reg_label"
        app:layout_constraintEnd_toEndOf="@id/registrationPhoneTextInputLayout"
        app:layout_constraintStart_toStartOf="@id/registrationPhoneTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/registrationPhoneTextInputLayout" />

    <TextView
        android:id="@+id/alreadyHasAccountTextView"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/already_have_an_account_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonRegistration" />

    <TextView
        android:id="@+id/toggleLoginTextView"
        style="@style/DailyMoodPurpleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enter_login_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alreadyHasAccountTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>